# SnakeGL

./: CMakeLists.txt  main.cpp
include/: field.h  food.h  player.h
scr/: field.cpp  food.cpp  player.cpp
